Fix definition overflow

--- a/demo-application/src/index.css
+++ b/demo-application/src/index.css
@@ -156,6 +156,7 @@ body {
   position: absolute;
   top: 30%;
   left: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
 }
 
@@ -163,7 +164,7 @@ body {
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-  top: 10%;
+  top: 23%;
 }
 
 .quizButton {
@@ -204,29 +205,29 @@ body {
 .quizButton1 {
   position: absolute;
   left: 7%;
-  bottom: 40%;
-  height: 25%;
+  bottom: 30%;
+  height: 15%;
   width: 40%;
 }
 .quizButton2 {
   position: absolute;
   right: 10%;
-  bottom: 40%;
-  height: 25%;
+  bottom: 30%;
+  height: 15%;
   width: 40%;
 }
 .quizButton3 {
   position: absolute;
   left: 7%;
   bottom: 10%;
-  height: 25%;
+  height: 15%;
   width: 40%;
 }
 .quizButton4 {
   position: absolute;
   right: 10%;
   bottom: 10%;
-  height: 25%;
+  height: 15%;
   width: 40%;
 }
 
@@ -349,7 +350,7 @@ font-size: 20px;
 .defText {
   overflow-wrap: normal;
   text-overflow: clip;
-  width: 200px;
+  /* width: 200px; */
 }
 
 /* Adding MOBILE VERSION - Mobile first so that it loads faster on mobile devices */
@@ -374,5 +375,40 @@ font-size: 20px;
   .defPage {
     height: 90%;
     width: 80%;
+  }
+
+  .quizButton1 {
+    position: absolute;
+    left: 7%;
+    bottom: 40%;
+    height: 25%;
+    width: 40%;
+  }
+  .quizButton2 {
+    position: absolute;
+    right: 10%;
+    bottom: 40%;
+    height: 25%;
+    width: 40%;
+  }
+  .quizButton3 {
+    position: absolute;
+    left: 7%;
+    bottom: 10%;
+    height: 25%;
+    width: 40%;
+  }
+  .quizButton4 {
+    position: absolute;
+    right: 10%;
+    bottom: 10%;
+    height: 25%;
+    width: 40%;
+  }
+  .definitionWord {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 10%;
   }
 }
